<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/TimerText"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/ScoreView"
        app:layout_constraintEnd_toEndOf="@+id/ScoreView"
        app:layout_constraintStart_toStartOf="@+id/ScoreView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tapButton"
        android:layout_width="117dp"
        android:layout_height="67dp"
        android:layout_marginBottom="148dp"
        android:fontFamily="casual"
        android:onClick="increment"
        android:text="@string/tapButtonText"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ScoreView"
        android:layout_width="201dp"
        android:layout_height="107dp"
        android:layout_marginTop="140dp"
        android:text="@string/textCounterView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="48sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>